--- a/.env
+++ b/.env
@@ -1,16 +1,3 @@
-## Twilio Creds
-REACT_APP_TWILIO_ACCOUNT_SID=ACc54a50a0b57b10e904bb962994a2dbbf
-REACT_APP_TWILIO_AUTH_TOKEN=3dcf35ec733840a33b0228e965df6f1f
-
-## Sendgrid Creds
-REACT_APP_SG_EMAIL_VERIFY_KEY=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
-REACT_APP_SG_API_KEY=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
-
-## Verification Service
-REACT_APP_VERIFY_SID=VAdface724049230660a4cae53fb210ba5
-## Conversation Service
-REACT_APP_CONV_MSG_SRV_SID=MG966b64e17ff8c7d0761fbb5fb9b501fd
-
 ## URL
-REACT_APP_FUNCTIONS_URL=https://conversationhandler-8959-dev.twil.io
+REACT_APP_FUNCTIONS_URL=https://engageconversations-2498-dev.twil.io/signUp
 
