Initial Commit of QR Signup

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Tradie Finder",
-  "name": "Tradie Finder-Enabling Marketplace Conversations",
+  "short_name": "Signup Test Tool",
+  "name": "Signup Test Tool",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
